--- a/angular.json
+++ b/angular.json
@@ -34,6 +34,7 @@
               "src/assets"
             ],
             "styles": [
+              "src/assets/vendor/semantic.min.css",
               "src/styles.scss"
             ],
             "scripts": []
